modified project